add review tests true&false cases,change naming in review service and modify review service impl